# display-ambient-light-board-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  build.rs
.cargo/: config.toml
docs/: ARCHITECTURE.md  COLOR_DATA_PROCESSING.md  README.md  state_machine_design.md
examples/: Cargo.toml  led_refresh_test.rs  led_test_minimal.rs
src/: led_control.rs  lib.rs  main.rs  mdns.rs  state_machine.rs  udp_server.rs  wifi.rs
test_scripts/: test_channel_order.py  test_connection.py  test_green_udp.py  test_led_simple.py
tools/: README.md  test_udp.py
