[package]
edition = "2024"
name    = "board-rs"
version = "0.0.0"
authors = ["Ivan Li <ivanli2048@gmail.com>"]

[dependencies]
esp-hal = { version = "=1.0.0-beta.1", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.14.0", features = ["esp32c3"] }
esp-bootloader-esp-idf = "0.1.0"

critical-section = "1.2.0"
esp-wifi = { version = "0.14.1", features = ["esp32c3", "wifi"] }
esp-alloc = "0.8.0"
heapless = { version = "0.8.0", default-features = false }
edge-mdns = { version = "0.6.0", default-features = false }
esp-hal-smartled = { version = "0.15.0", features = ["esp32c3"] }
smart-leds = "0.4.0"
smoltcp = { version = "0.12.0", default-features = false, features = ["proto-ipv4", "socket-dhcpv4", "socket-udp", "medium-ethernet"] }
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e" }
# Embassy networking - using compatible versions based on Cargo.lock analysis
embassy-net = { version = "0.7.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "multicast"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768"] }
embassy-sync = { version = "0.7.0" }
esp-hal-embassy = { version = "0.8.1", features = ["esp32c3"] }
static_cell = "2.1.0"
embedded-hal = "1.0.0"

[[example]]
name = "led_test_minimal"
path = "examples/led_test_minimal.rs"

[[example]]
name = "led_refresh_test"
path = "examples/led_refresh_test.rs"

[build-dependencies]
dotenvy = "0.15.7"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
