[package]
name = "minimal_led_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "minimal_led_test"
path = "minimal_led_test.rs"

[dependencies]
esp-hal = { version = "1.0.0-beta.1", features = ["esp32c3"] }
esp-backtrace = { version = "0.15.0", features = ["esp32c3", "exception-handler", "panic-handler", "println"] }
esp-hal-smartled = "0.15.0"
smart-leds = "0.4.0"

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
